# PyCont

./: .gitignore  BranchSwitching.py  Continuation.py  LICENSE  NewtonRaphson.py  README.md  pyproject.toml
examples/: FoldBifurcation.py  FoldContinuation.py  PitchforkBifurcation.py  PitchforkContinuation.py  TranscriticalBifurcation.py  TranscriticalContinuation.py
examples/Gradient extremals/: MullerBrown.py
internal/: BranchSwitching.py  EigenFunctions.py  Math.py  PseudoArclengthContinuation.py  TestFunctions.py
src/: BranchSwitching.py  PseudoArclengthContinuation.py
src/pycont/: PseudoArclengthContinuation.py  __init__.py  continuation.py
src/pycont/internal/: PseudoArclengthContinuation.py  TestFunctions.py
tests/: TestBranchSwitching.py  TestContinuation.py  TestFoldContinuation.py  TestNewtonRaphson.py  TestTranscriticalContinuation.py  testPitchforkContinuation.py
